fix: add better css style loading and convert all image to webp

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -376,7 +376,7 @@ font-family: 'Segoe UI Bold';
     overflow: hidden;
     margin-top: 100px;
     padding: 0;
-    background-image: url("../../public/img/homeAssets/feedbackBg2.png");
+    background-image: url("../../public/img/homeAssets/feedbackBg2.webp");
     background-position: center top;
     background-size: cover;
     padding-bottom: 150px;
